# OCRean

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  package-lock.json  package.json  pyproject.toml  ruff.toml
.github/workflows/: ci.yml
backend/: __init__.py  config.example.env
backend/api/: __init__.py
backend/api/app/: config.py  main.py
backend/api/app/services/: __init__.py  files.py  ocr.py  storage.py  text.py
backend/api/app/services/processing/: __init__.py  ocr.py
backend/api/app/services/storage/: __init__.py  factory.py  protocol.py  s3.py
backend/api/app/services/tests/: test_file_storage.py  test_s3_storage.py  test_text_processor.py
backend/scripts/: setup_s3_env.sh
infra/terraform/file-storage/: locals.tf  main.tf  outputs.tf  variables.tf  versions.tf
tests/: conftest.py
tests/services/: test_file_storage.py  test_text_processor.py
