[project]
name = "ocrean"
version = "0.1.0"
description = ""
authors = [
    {name = "maxence"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "ruff (>=0.14.6,<0.15.0)",
    "pre-commit (>=4.4.0,<5.0.0)"
]
